[package]
name = "cratemorelikebox"
description = "cratemorelikebox is a package made for fun its not supposed to be useful"
version = "1.1.2"
authors = ["Puppet <doggyandkira2013@gmail.com>"]
readme = "README.md"
edition = "2021"
repository = "https://github.com/Thepuppetqueen57/cratemorelikebox"
license-file = "LICENSE"
keywords = ["dumb", "stupid", "useless"]

[dependencies]
rand = "0.8.5"
